Thu Oct 11 02:54:07 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_dump.c: fix debug prints to catch up recent changes
	  such as VM data structures.

Thu Oct 11 02:50:34 2012  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (insn_operand_intern): add support disasm TS_CALLINFO
	  operands.

Wed Oct 10 15:12:48 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb (TestProcess#test_execopts_gid): skip on
	  windows because the platform does not have Process.group method.
	  patched by Jon Forums in [ruby-core:47878] [Bug #7133].

Tue Oct  9 23:18:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (assert_file, assert_file_not): more
	  descriptive assertions for File predicates.

Tue Oct  9 18:01:37 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_sample): use rb_random_ulong_limited, since
	  precision of long may be larger than double.

	* random.c (rb_random_ulong_limited): new function to return a random
	  value from 0 upto limit as unsigned long, simillary to
	  rb_genrand_ulong_limited but with arbitrary RNG object.

Tue Oct  9 17:13:27 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_execarg_addopt, rb_execarg_run_options): add :uid and
	  :gid options.  [ruby-core:47414] [Feature #6975]

Tue Oct  9 14:36:11 2012  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_free): fix memory leak.
	  rb_iseq_t::callinfo_entries should be freed.

Tue Oct  9 14:28:18 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h (rb_call_info_t): add new type `rb_call_info_t'.
	  This data structure contains information including inline method
	  cache. After that, `struct iseq_inline_cache_entry' does not
	  need to contain inline cache for method invocation.
	  Other information will be added to this data structure.

	* vm_core.h (rb_iseq_t): add `callinfo_entries' and `callinfo_size'
	  members to `rb_iseq_t'.

	* insns.def, compile.c: Use CALL_INFO instead of IC.
